--- a/src/styles/BasketItem.scss
+++ b/src/styles/BasketItem.scss
@@ -8,7 +8,7 @@
 .basket-item-wrapper {
   border-radius: 2px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 10px 0;
+  margin: 5px 10px 10px 10px;
   padding: 10px;
 
   .basket-item-image {
